# CustomRequests

./: .gitignore  README.md  file_name.csv  git_commit.py  pyproject.toml  requirements.txt  tests.py  tests_stand.py  update_library_version.py
.github/workflows/: all_tests.yml  build_lib.yml  github-actions-demo.yml
CustomRequests/: pyproject.toml
src/: __init__.py  custom_requests.py  parserproxy.py  requestsgarant.py  test_parserproxy.py  test_watsapp.py  watsapp.py
src/garant_success_requests/: custom_requests.py
src/pages/: hidemy.name_0_proxy.html  hidemy.name_64_proxy.html
src/requestsgarant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
