[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "requestsgarant"
version = "0.1.4"
description = "Гарантированно успешные web-запросы"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
[[project.authors]]
name = "plp-kolyan"
email = "plp-kolyan@mail.ru"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/plp-kolyan/CustomRequests.git"
